# Generative_Deep_Learning_2nd_Pytorch

./: #.gitattributes#  .gitattributes  02_vae_fashion.ipynb  README.md  README_all.md  README_c.md  analysis_utils.py  bayes_infer.py  bayesian_data_processor.py  bayesian_engine.py  beta_calculator.py  ciq_provider.py  company_codes.py  config_manager.py  country_code_manager.py  country_risk_parameters.py  csv_to_pkl.py  data_manager.py  data_monitoring.py  data_processor.py  ddm.ipynb  ebm.ipynb  factset_provider.py  gen_tradename_mapping.py  gppm_config.yml  install_cmdstan.sh  model_builder.py  msci_data_provider.py  prepare_data.py  product_score_calculator.py  provider.py  query_params.py  rbics_provider.py  rbics_types.py  sqlserver.py  tradename_segment_mapper.py  types.py
02_deeplearning/: 01_mlp.ipynb  02_cnn.ipynb  MLP Notebook.ipynb  cnn.ipynb  mlp.ipynb
03_vae/: 01_autoencoder.ipynb  02_vae_fashion.ipynb  03_vae_faces.ipynb  autoencoder.ipynb  vae_faces.ipynb  vae_fashion.ipynb
04_gan/: 01_dcgan.ipynb  02_wgan_gp.ipynb  03_cgan.ipynb  cgan.ipynb  dcgan.ipynb  wgan_gp.ipynb
04_gan/models/: cgan_model_epoch_1.pth  cgan_model_epoch_150.pth  cgan_model_epoch_20.pth  cgan_model_epoch_5.pth  dcgan_model_epoch_100.pth  dcgan_model_epoch_150.pth  dcgan_model_epoch_200.pth  dcgan_model_epoch_250.pth  dcgan_model_epoch_300.pth  dcgan_model_epoch_50.pth  wgangp_model_epoch_1.pth  wgangp_model_epoch_100.pth  wgangp_model_epoch_150.pth  wgangp_model_epoch_200.pth  wgangp_model_epoch_50.pth
05_autoregressive/: 01_lstm.ipynb  02_pixelcnn.ipynb  lstm.ipynb
05_autoregressive/metrics/: lstm_metrics.json  scrach_pixelcnn_metrics.json  scrach_pixelcnn_model_50.json
05_autoregressive/models/: lstm_model_epoch_25.pth  scrach_pixelcnn_model_epoch_50.pth
06_normflow/: 01_realnvp.ipynb  realnvp.ipynb
07_ebm/: 01_ebm.ipynb  ebm.ipynb
07_ebm/metrics/: ebm_metrics.json  eval_ebm_metrics.json
07_ebm/models/: ebm_epoch_80.pth
08_diffusion/: 01_ddm.ipynb  ddm.ipynb
08_diffusion/metrics/: 13_ddm_metrics.json
08_diffusion/models/: ddm_epoch_50.pth
09_transformer/: 01_gpt.ipynb  gpt.ipynb
09_transformer/metrics/: gpt_metrics.json
09_transformer/models/: gpt_epoch_20.pth  gpt_epoch_5.pth
data_providers/core/: base_provider.py
data_providers/database/: db_connections.py  sqlserver.py
data_providers/sources/ciq/: provider.py  query_params.py  types.py
data_providers/sources/factset/: provider.py  query_params.py  types.py
data_providers/sources/msci/: provider.py  query_params.py  types.py
data_providers/sources/rbics/: provider.py  query_params.py  types.py
data_providers/sources/revere/: provider.py
data_providers/sources/segment/: provider.py  query_params.py  types.py
data_providers/utils/: data_validation.py
factset_feed/: provider.py  query_params.py  types.py
factset_tradenames/: provider.py  query_params.py  types.py
gppm/analysis/bayesian/: data_processor.py  inference.py  model_builder.py
gppm/analysis/financial_metrics/: product_score_calculator.py  roic_calculator.py
gppm/analysis/geographic/: region_analysis.py
gppm/analysis/risk_capital/: beta_calculator.py  beta_types.py  wacc_calculator.py
gppm/cli/: bayes_infer.py  csv_to_pkl_optimized.py  csv_to_pkl_raw.py  prepare_data.py
gppm/core/: config_manager.py  data_manager.py
gppm/data/static/: country_risk_parameters.csv  iso_3166_countries.csv
gppm/utils/: analysis_utils.py  company_codes.py  country_code_manager.py  country_risk_parameters.py  financial_metrics_utils.py
models/: global_ppm_roic_model.stan
monitoring/: README.md  __init__.py  data_monitoring.py  monitoring_config.py
valueflow/: README.md  __init__.py  graph.py  pyproject.toml  types.py  valuator.py
valueflow/benchmarks/: __init__.py  performance_test.py
valueflow/examples/: __init__.py  advanced_usage.py  basic_usage.py
valueflow/tests/: __init__.py  test_valuator.py
